@@ -20,7 +20,7 @@
 .\" with GetData; if not, write to the Free Software Foundation, Inc.,
 .\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 .\"
-.TH get_field_list_by_type 3 "17 October 2008" "Version 0.4.0" "GETDATA"
+.TH get_field_list_by_type 3 "28 October 2008" "Version 0.4.0" "GETDATA"
 .SH NAME
 get_field_list_by_type \(em retrieve a list of fields in a dirfile
 .SH SYNOPSIS
@@ -87,9 +87,9 @@ or
 Upon successful completion,
 .BR get_field_list_by_type ()
 returns a pointer to an array of strings containing the names of all the fields
-defined in the dirfile database of the specific type.  If no fields of the given
-type exist, NULL is returned.  On error it returns NULL and sets the dirfile
-error to a non-zero error value.  Possible error values are:
+defined in the dirfile database of the specific type.  On error it returns NULL
+and sets the dirfile error to a non-zero error value.  Possible error values
+are:
 .TP 8
 .B GD_E_ALLOC
 The library was unable to allocate memory.
