@@ -20,7 +20,7 @@
 .\" with GetData; if not, write to the Free Software Foundation, Inc.,
 .\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 .\"
-.TH get_mfield_list 3 "17 October 2008" "Version 0.4.0" "GETDATA"
+.TH get_mfield_list 3 "28 October 2008" "Version 0.4.0" "GETDATA"
 .SH NAME
 get_mfield_list \(em retrieve a list of fields in a dirfile
 .SH SYNOPSIS
@@ -64,9 +64,8 @@ a call to
 Upon successful completion,
 .BR get_mfield_list ()
 returns a pointer to an array of strings containing the names of all the
-metafields of the given parent.  If the given parent has no metafields, NULL is
-returned.  On error it returns NULL and sets the dirfile error to a non-zero
-error value.  Possible error values are:
+metafields of the given parent.  On error it returns NULL and sets the dirfile
+error to a non-zero error value.  Possible error values are:
 .TP 8
 .B GD_E_ALLOC
 The library was unable to allocate memory.
