@@ -1,3 +1,12 @@
+2008-10-28   D. V. Wiebe <getdata@ketiltrout.net>  svn:200
+	* src/field_list.c (get_field_list get_vector_list get_field_list_by_type
+	get_strings) src/meta_list.c (get_mfield_list get_mvector_list
+	get_mfield_list_by_type get_mstrings): Return a valid list even if there
+	are zero elements.
+
+	* src/field_list.c (get_mfield_list_by_type): Return the correct list in all
+	cases.
+
 2008-10-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:197
 	* src/putdata.c (_GD_DoRawOut): Figure out the encoding scheme before
 	attempting to check whether idem needs byte-swapping.  Bug report from
